scenarios/08-ingress/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ktslab
  labels:
    app.kubernetes.io/part-of: ktslab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  namespace: ktslab
  labels:
    app: web-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      restartPolicy: Always
      containers:
        - name: web
          image: nginx:1.27
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
